force-app/main/default/objects/Gmail_Thread_Summary__c/Gmail_Thread_Summary__c.object-meta.xml
<CustomObject>
    <description>Stores AI-generated summaries, key discussion points, and action items for Gmail conversation threads with automatic cache invalidation.</description>
    <label>Gmail Thread Summary</label>
    <nameField>
        <displayFormat>GTS-{000000}</displayFormat>
        <label>Summary Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Gmail Thread Summaries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>