force-app/main/default/objects/Gmail_Thread_Summary__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Associated Account</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Gmail Thread Summaries</relationshipLabel>
    <relationshipName>Gmail_Thread_Summaries</relationshipName>
    <type>Lookup</type>
</CustomField>