force-app/main/default/objects/Gmail_Thread_Summary__c/fields/Action_Items__c.field-meta.xml
<CustomField>
    <fullName>Action_Items__c</fullName>
    <description>Action items, next steps, and pending questions requiring follow-up.</description>
    <label>Action Items</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>