force-app/main/default/objects/Gmail_Thread_Summary__c/fields/Executive_Summary__c.field-meta.xml
<CustomField>
    <fullName>Executive_Summary__c</fullName>
    <description>AI-generated high-level executive summary of the conversation thread.</description>
    <label>Executive Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>