force-app/main/default/objects/Gmail_Thread_Summary__c/fields/Key_Points__c.field-meta.xml
<CustomField>
    <fullName>Key_Points__c</fullName>
    <description>Bulleted key discussion points and client sentiments.</description>
    <label>Key Points</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>