force-app/main/default/objects/Gmail_Thread_Summary__c/fields/Last_Generated_At__c.field-meta.xml
<CustomField>
    <fullName>Last_Generated_At__c</fullName>
    <description>Timestamp when AI generated this summary.</description>
    <label>Last Generated At</label>
    <type>DateTime</type>
</CustomField>