force-app/main/default/objects/Gmail_Thread_Summary__c/fields/Latest_Message_Date__c.field-meta.xml
<CustomField>
    <fullName>Latest_Message_Date__c</fullName>
    <description>Timestamp of the latest message in the thread.</description>
    <label>Latest Message Date</label>
    <type>DateTime</type>
</CustomField>