force-app/main/default/objects/Gmail_Thread_Summary__c/fields/Latest_Message_Id__c.field-meta.xml
<CustomField>
    <fullName>Latest_Message_Id__c</fullName>
    <description>Gmail Message ID of the latest message when this summary was generated.</description>
    <label>Latest Message ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>