force-app/main/default/objects/Gmail_Thread_Summary__c/fields/Message_Count__c.field-meta.xml
<CustomField>
    <fullName>Message_Count__c</fullName>
    <description>Number of messages in the thread when this summary was generated. Used for cache invalidation.</description>
    <label>Message Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>