force-app/main/default/objects/Gmail_Thread_Summary__c/fields/Model_Used__c.field-meta.xml
<CustomField>
    <fullName>Model_Used__c</fullName>
    <description>AI model used to generate the summary (e.g. gemini-1.5-flash).</description>
    <label>Model Used</label>
    <length>100</length>
    <type>Text</type>
</CustomField>