force-app/main/default/objects/Gmail_Thread_Summary__c/fields/Thread_Id__c.field-meta.xml
<CustomField>
    <fullName>Thread_Id__c</fullName>
    <description>Gmail unique thread identifier</description>
    <externalId>true</externalId>
    <label>Thread ID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>